<?xml version="1.0"?>
<package format="2">
  <name>darknet</name>
  <version>0.1.0</version>
  <description>Darknet, an open source neural network framework.</description>

  <author email="you@example.com">Joseph Redmon</author>
  <maintainer email="you@example.com">Alexey Bochkovskiy</maintainer>

  <license>YOLO license</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libopencv-dev</depend>

  <!-- nvidia-cuda-dev is just the libraries to link against -->
  <exec_depend>nvidia-cuda-dev</exec_depend>

  <!-- nvidia-cuda includes nvidia-cuda-dev plus the nvcc compiler -->
  <build_depend>nvidia-cuda</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

